alignment needs to be fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,12 +18,7 @@ body {
   .left-dropdown {
     left: 40% !important;
   }
-  .col-xl-3-5 {
-    width: 30%;
-  }
-  .col-xl-6-5 {
-    width: 70%;
-  }
+
   .col-20 {
     width: 20%;
   }
